# HelloWxWidgets

./: .gitignore  CMakeLists.txt  README.md  SetupUnix.sh  SetupVS22.ps1  SetupXcode.sh  vcpkg.json
include/: frame.h
source/: app.cxx  frame.cxx
